# kernelforge

./: .env.example  .gitignore  Makefile  README.md  ai_infra_competitions.md  pyproject.toml  run_demo.sh
.github/workflows/: ci.yml
baselines/: naive.py
chaos/: llm_proxy.py
configs/: breakers.toml  chaos.toml  iteration.toml  routing_config.yaml
demo/: compare_ab.py  record.py  voiceover.py
demo/artifacts/: kf_ledger.jsonl  manifest.json  naive_ledger.jsonl  run_summary.txt  scorecard_demo.md  scorecard_readme.md
demo/remotion/: package.json  remotion.config.ts  tsconfig.json
demo/remotion/src/: Root.tsx  Video.tsx
docs/superpowers/plans/: 2026-05-22-kernelforge.md
kernel_lab/: bench_tool.py  compile_tool.py  run_tool.py  server.py  verify_tool.py
kernelforge/: agent.py  expert_examples.py  final_answer.py  holdouts.py  ledger.py  llm_client.py  llm_transport.py  op_registry.py  prompts.py
local_gateway/: __main__.py  server.py
references/: abs.py  elementwise_add.py  elementwise_mul.py  exp.py  gelu.py  layernorm.py  log.py  matmul.py  max_last.py  mean_last.py  relu.py  rmsnorm.py  rope.py  sigmoid.py  silu.py  softmax.py  sqrt.py  sum_last.py  swiglu.py  tanh.py
scorecard/: generate.py  render.py
scripts/: make_devpost_cover.py  mlx_metal_hello.py
tests/: test_chaos_proxy.py  test_final_answer.py  test_holdouts.py  test_iteration_loop.py  test_kernel_lab_compile.py  test_ledger.py  test_llm_client.py  test_local_gateway.py  test_naive_baseline.py  test_references.py  test_scorecard.py
(+2 files in other folders)
