[project]
name = "kernelforge"
version = "0.1.0"
description = "Verified MLX/Metal kernel generation agent"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlx>=0.21",
    "torch>=2.5",
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "tenacity>=9.0",
    "tomli>=2.0",
    "mcp>=1.0",
    "tomli-w>=1.0",
    "numpy>=1.26",
    "rich>=13.7",
    "typer>=0.13",
    "anyio>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
kernelforge = "kernelforge.cli:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
